<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">CarmaBlog</string>
    <string name="activity_rss_name">CarmaBlog - Recent Posts</string>
    
    <string name="menu_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    
    <string name="menu_fr">In french</string>
    <string name="menu_en">In english</string>
    
    <string name="menu_rss">Recent Posts</string>
    
    <string name="menu_categories">Categories</string>
    <string name="menu_management">Management</string>
    <string name="menu_agile_programming">Agile Programming</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_linux">Linux</string>
    <string name="menu_event">Event</string>
    
    <string name="menu_mode_night">Night mode</string>
    <string name="menu_mode_normal">Normal mode</string>
    <string name="menu_about">About</string>
    
    <string name="title_share">Share this post with&#8230;</string>
    <string name="message_share_app_not_found">No sharing application found&#8230;</string>
    
    <string name="message_loading">Loading&#8230;</string>
    <string name="message_timeout">Unable to connect to this page.\nConnection timeout&#8230;</string>
    
    <string name="message_next_post">Next post &#8250;</string>
    <string name="message_previous_post">&#8249; Previous post</string>
    <string name="message_first_post">First post reached&#8230;</string>
    <string name="message_last_post">Last post reached&#8230;</string>
    <string name="message_next_page">Next page: %1$d/%2$d &#8250;</string>
    <string name="message_previous_page">&#8249; Previous page: %1$d/%2$d</string>
    <string name="message_first_page">First page reached&#8230;</string>
    <string name="message_last_page">Last page reached&#8230;</string>
    
    <string name="rss_element_category">Category</string>
    <string name="rss_element_title">Post title</string>
    <string name="rss_element_date">Date of publication</string>
    
</resources>
